syntax = "proto3";

option csharp_namespace = "Heartbeat.Rpc";

service HeartbeatRpc {
  rpc GetObjectTypeStatistics (ObjectTypeStatisticsRequest) returns (ObjectTypeStatisticsReply);
}

message ObjectTypeStatisticsRequest {
  TraversingHeapMode traversing_heap_mode = 1;
  int32 type_count = 2;
}

message ObjectTypeStatisticsReply {
  repeated ObjectTypeInstanceStatistics object_types = 1;
}

enum TraversingHeapMode {
	LIVE = 0;
	DEAD = 1;
	ALL = 2;
}

message ObjectTypeInstanceStatistics {
	string type_name = 1;
	uint64 total_size = 2;
	int32 instance_count = 3;
}